--- a/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -108,7 +108,7 @@ MRUItem1=/Game/Maps/MainMenu
 LastLevel=/Game/Maps/TempleBlockOut
 
 [AssetEditorManager]
-CleanShutdown=False
+CleanShutdown=True
 
 [ContentBrowserRecent]
 MRUItem0=/Game/Anims/Player/mon_player_dashB
