--- a/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -109,26 +109,19 @@ LastLevel=/Game/Maps/TempleBlockOut
 
 [AssetEditorManager]
 CleanShutdown=True
-OpenAssetsAtExit=/Game/Blueprints/AI/bp_fistAI.bp_fistAI
-OpenAssetsAtExit=/Game/Blueprints/AI/bp_fistAI_02.bp_fistAI_02
-OpenAssetsAtExit=/Game/Blueprints/CharacterBP/bp_baseCharacter.bp_baseCharacter
-OpenAssetsAtExit=/Game/Blueprints/enums/enum_AiState.enum_AiState
-OpenAssetsAtExit=/Game/Blueprints/CharacterBP/bp_fistCharacter.bp_fistCharacter
-OpenAssetsAtExit=/Game/Anims/FIst/mon_Fighter_G_lATK02.mon_Fighter_G_lATK02
-OpenAssetsAtExit=/Game/Blueprints/AnimationBP/ABP_FighterCharacter.ABP_FighterCharacter
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Blueprints/AnimationBP/ABP_FighterCharacter
-MRUItem1=/Game/Anims/FIst/mon_fighter_G_lATK01
-MRUItem2=/Game/Blueprints/CharacterBP/bp_fistCharacter
-MRUItem3=/Game/Blueprints/enums/enum_AiState
-MRUItem4=/Game/Blueprints/CharacterBP/bp_baseCharacter
-MRUItem5=/Game/Blueprints/AI/bp_fistAI_02
-MRUItem6=/Game/Blueprints/AI/bp_fistAI
-MRUItem7=/Game/Blueprints/AnimationBP/ABP_PlayerCharacter
-MRUItem8=/Game/Blueprints/AnimationBP/basePlayer_abp
-MRUItem9=/Game/Anims/Player/mon_player_finisher
-MRUItem10=/Game/Blueprints/MetricListener/Listener
+MRUItem0=/Game/Blueprints/CharacterBP/bp_baseCharacter
+MRUItem1=/Game/Blueprints/AI/bp_fistAI
+MRUItem2=/Game/Anims/FIst/mon_fighter_G_lATK01
+MRUItem3=/Game/Blueprints/AI/bp_fistAI_02
+MRUItem4=/Game/Blueprints/MetricListener/Listener
+MRUItem5=/Game/Blueprints/AnimationBP/ABP_FighterCharacter
+MRUItem6=/Game/Blueprints/CharacterBP/bp_fistCharacter
+MRUItem7=/Game/Blueprints/enums/enum_AiState
+MRUItem8=/Game/Blueprints/AnimationBP/ABP_PlayerCharacter
+MRUItem9=/Game/Blueprints/AnimationBP/basePlayer_abp
+MRUItem10=/Game/Anims/Player/mon_player_finisher
 MRUItem11=/Game/Blueprints/Data/Data_Fists_hitValues
 MRUItem12=/Game/Blueprints/Instance/gameInfo_instance
 MRUItem13=/Game/Mesh/m_Walls_sencondary
@@ -1443,7 +1436,7 @@ REINST_bp_fistCharacter_C_166.AttackInfo=True
 REINST_bp_fistCharacter_C_166.Default=True
 bp_fistAI_02_C.Tick=True
 bp_fistAI_02_C.Default=True
-bp_fistAI_02_C.AI=True
+bp_fistAI_02_C.AI=False
 bp_fistAI_02_C.Controller=True
 bp_fistAI_02_C.Replication=True
 bp_fistAI_02_C.Input=True
@@ -1476,6 +1469,39 @@ REINST_bp_fistAI_02_C_899.Rendering=True
 REINST_bp_fistAI_02_C_899.Replication=True
 REINST_bp_fistAI_02_C_899.Input=True
 REINST_bp_fistAI_02_C_899.Actor=True
+Listener_C.TransformCommon=True
+REINST_bp_fistAI_02_C_108.Tick=True
+REINST_bp_fistAI_02_C_108.None=True
+REINST_bp_fistAI_02_C_108.AI=True
+REINST_bp_fistAI_02_C_108.Controller=True
+REINST_bp_fistAI_02_C_108.Rendering=True
+REINST_bp_fistAI_02_C_108.Replication=True
+REINST_bp_fistAI_02_C_108.Input=True
+REINST_bp_fistAI_02_C_108.Actor=True
+K2Node_Tunnel.Graph=True
+K2Node_Tunnel.Inputs=True
+K2Node_Tunnel.Outputs=True
+PlayerState.Actor=True
+CharacterMovementComponent.Character Movement: Jumping / Falling=True
+CharacterMovementComponent.Character Movement (General Settings)=True
+CharacterMovementComponent.Character Movement: Walking=True
+CharacterMovementComponent.Character Movement: Swimming=True
+CharacterMovementComponent.Character Movement: Flying=True
+CharacterMovementComponent.Character Movement: Custom Movement=True
+CharacterMovementComponent.Character Movement (Rotation Settings)=True
+CharacterMovementComponent.Character Movement: Physics Interaction=True
+CharacterMovementComponent.Character Movement (Networking)=True
+CharacterMovementComponent.Character Movement=True
+CharacterMovementComponent.Character Movement: Avoidance=True
+CharacterMovementComponent.Character Movement: NavMesh Movement=True
+CharacterMovementComponent.RootMotion=True
+CharacterMovementComponent.NavMovement=True
+CharacterMovementComponent.Velocity=True
+CharacterMovementComponent.PlanarMovement=True
+CharacterMovementComponent.MovementComponent=True
+CharacterMovementComponent.Tags=True
+CharacterMovementComponent.Activation=True
+CharacterMovementComponent.Cooking=True
 
 [RootWindow]
 ScreenPosition=X=626.000 Y=0.000
@@ -1506,7 +1532,7 @@ ContentBrowserTab1.ActiveTypeFilters=
 ContentBrowserTab1.EnabledTypeFilters=
 ContentBrowserTab1.ActiveFrontendFilters=
 ContentBrowserTab1.EnabledFrontendFilters=
-ContentBrowserTab1.SelectedPaths=/Game/Anims
+ContentBrowserTab1.SelectedPaths=/Game/Blueprints/AI
 ContentBrowserTab1.Favorites.SelectedPaths=
 FavoritePaths=
 ContentBrowserTab1.CollectionsExpanded=True
@@ -2381,6 +2407,8 @@ FloatProperty=K2Node_VariableGet.DefaultValueCategory.None,bp_baseCharacter_C.Ph
 /Game/Blueprints/MetricListener/Listener.Listener=1
 /Game/Maps/TempleBlockOut.TempleBlockOut:PersistentLevel.TempleBlockOut=1
 /Game/Blueprints/Instance/gameInfo_instance.gameInfo_instance=1
+/Game/Blueprints/AI/bp_fistAI_02.bp_fistAI_02=1
+/Game/Anims/FIst/mon_Fighter_G_lATK02.mon_Fighter_G_lATK02=1
 
 [MessageLog]
 LastLogListing=PIE
@@ -2389,9 +2417,9 @@ LastLogListing=PIE
 PreviewMeshCollection="\"Object.SkeletalMeshes\" \"Object.SkeletalMeshes\" "
 DataAsset="\"Object.SkeletalMeshes\" \"Object.SkeletalMeshes\" "
 Object=
-bp_baseCharacter_C="\"Object.ANimation.DashAnimations\" \"Object.ANimation.lATK_G_Animations\" \"Object.ANimation.lATK_A_Animations\" \"Object.ANimation.hATK_G_Animations\" \"Object.ANimation.hATK_A_Animations\" \"Object.Inputs.Actions\" \"Object.Character\" \"Object.Character.Mesh.Object.Rendering.OverrideMaterials\" \"Object.Character.Mesh.Object.Lighting.LightingChannels\" \"Object.Character.Mesh.Object.Collision.BodyInstance\" \"Object.Character.Mesh.Object.Collision.BodyInstance.WalkableSlopeOverride\" \"Object.Character.CharacterMovement.Object.Character Movement: Walking.CurrentFloor\" \"Object.Character.CharacterMovement.Object.Character Movement (Rotation Settings).RotationRate\" \"Object.Character.CharacterMovement.Object.NavMovement.NavAgentProps\" \"Object.Character.CapsuleComponent.Object.Shape.ShapeColor\" \"Object.Character.CapsuleComponent.Object.Collision.BodyInstance\" \"Object.Character.CapsuleComponent.Object.Collision.BodyInstance.WalkableSlopeOverride\" \"Object.Input\" "
-Character="\"Object.ANimation.DashAnimations\" \"Object.ANimation.lATK_G_Animations\" \"Object.ANimation.lATK_A_Animations\" \"Object.ANimation.hATK_G_Animations\" \"Object.ANimation.hATK_A_Animations\" \"Object.Inputs.Actions\" \"Object.Character\" \"Object.Character.Mesh.Object.Rendering.OverrideMaterials\" \"Object.Character.Mesh.Object.Lighting.LightingChannels\" \"Object.Character.Mesh.Object.Collision.BodyInstance\" \"Object.Character.Mesh.Object.Collision.BodyInstance.WalkableSlopeOverride\" \"Object.Character.CharacterMovement.Object.Character Movement: Walking.CurrentFloor\" \"Object.Character.CharacterMovement.Object.Character Movement (Rotation Settings).RotationRate\" \"Object.Character.CharacterMovement.Object.NavMovement.NavAgentProps\" \"Object.Character.CapsuleComponent.Object.Shape.ShapeColor\" \"Object.Character.CapsuleComponent.Object.Collision.BodyInstance\" \"Object.Character.CapsuleComponent.Object.Collision.BodyInstance.WalkableSlopeOverride\" \"Object.Input\" "
-Pawn="\"Object.ANimation.DashAnimations\" \"Object.ANimation.lATK_G_Animations\" \"Object.ANimation.lATK_A_Animations\" \"Object.ANimation.hATK_G_Animations\" \"Object.ANimation.hATK_A_Animations\" \"Object.Inputs.Actions\" \"Object.Character\" \"Object.Character.Mesh.Object.Rendering.OverrideMaterials\" \"Object.Character.Mesh.Object.Lighting.LightingChannels\" \"Object.Character.Mesh.Object.Collision.BodyInstance\" \"Object.Character.Mesh.Object.Collision.BodyInstance.WalkableSlopeOverride\" \"Object.Character.CharacterMovement.Object.Character Movement: Walking.CurrentFloor\" \"Object.Character.CharacterMovement.Object.Character Movement (Rotation Settings).RotationRate\" \"Object.Character.CharacterMovement.Object.NavMovement.NavAgentProps\" \"Object.Character.CapsuleComponent.Object.Shape.ShapeColor\" \"Object.Character.CapsuleComponent.Object.Collision.BodyInstance\" \"Object.Character.CapsuleComponent.Object.Collision.BodyInstance.WalkableSlopeOverride\" \"Object.Input\" "
+bp_baseCharacter_C="\"Object.hATK_saveAttack\" \"Object.hATK_saveAttack\" "
+Character="\"Object.hATK_saveAttack\" \"Object.hATK_saveAttack\" "
+Pawn="\"Object.hATK_saveAttack\" \"Object.hATK_saveAttack\" "
 Enemy_BP_C="\"Object.Enemy\" \"Object.Enemy\" "
 BasePlayer_BP_C="\"Object.Character\" \"Object.Character\" "
 ProjectPackagingSettings="\"Object.Packaging.MapsToCook\" "
@@ -2473,7 +2501,7 @@ ParticleModuleOrbit="\"Object.Offset.OffsetAmount\" \"Object.Offset.OffsetAmount
 ParticleModuleOrbitBase="\"Object.Offset.OffsetAmount\" \"Object.Offset.OffsetAmount.Distribution\" \"Object.Offset.OffsetOptions\" \"Object.Rotation.RotationAmount.Distribution\" \"Object.RotationRate.RotationRateAmount.Distribution\" "
 CameraComponent=
 SceneComponent=
-ActorComponent="\"Object.GravityScale\" \"Object.GravityScale\" "
+ActorComponent=
 ParticleModuleRotation="\"Object.Rotation.StartRotation\" \"Object.Rotation.StartRotation.Distribution\" "
 ParticleModuleRotationBase="\"Object.Rotation.StartRotation\" \"Object.Rotation.StartRotation.Distribution\" "
 ParticleModuleRequired=
@@ -2497,10 +2525,10 @@ GeomModifier_Extrude="\"Object.Settings\" "
 GeomModifier_Edit="\"Object.Settings\" "
 GeomModifier="\"Object.Settings\" "
 StaticMesh="\"Object.StaticMesh.BodySetup.Object.AggGeom\" \"Object.StaticMesh.BodySetup.Object.DefaultInstance\" \"Object.StaticMesh.BodySetup.Object.DefaultInstance.CollisionResponses.ResponseArray.ResponseArray[0]\" \"Object.ImportSettings.AssetImportData\" \"Object.ImportSettings.AssetImportData.Object.File Path\" "
-CharacterMovementComponent="\"Object.GravityScale\" \"Object.GravityScale\" "
-PawnMovementComponent="\"Object.GravityScale\" \"Object.GravityScale\" "
-NavMovementComponent="\"Object.GravityScale\" \"Object.GravityScale\" "
-MovementComponent="\"Object.GravityScale\" \"Object.GravityScale\" "
+CharacterMovementComponent=
+PawnMovementComponent=
+NavMovementComponent=
+MovementComponent=
 REINST_bp_fistCharacter_C_166="\"Object.ANimation.DashAnimations\" \"Object.ANimation.lATK_G_Animations\" \"Object.ANimation.lATK_A_Animations\" \"Object.ANimation.hATK_G_Animations\" \"Object.ANimation.hATK_A_Animations\" \"Object.AttackInfo.DataTableInfo\" \"Object.AttackInfo.DataTableInfo.DataTableInfo[0]\" \"Object.AttackInfo.DataTableInfo.DataTableInfo[1]\" \"Object.AttackInfo.DataTableInfo.DataTableInfo[2]\" \"Object.AttackInfo.DataTableInfo.DataTableInfo[3]\" \"Object.AttackInfo.DataTableInfo.DataTableInfo[4]\" \"Object.AttackInfo.DataTableInfo.DataTableInfo[5]\" \"Object.AttackInfo.DataTableInfo.DataTableInfo[6]\" \"Object.AttackInfo.DataTableInfo.DataTableInfo[7]\" \"Object.AttackInfo.DataTableInfo.DataTableInfo[8]\" \"Object.AttackInfo.DataTableInfo.DataTableInfo[9]\" \"Object.AttackInfo.DataTableInfo.DataTableInfo[10]\" \"Object.AttackInfo.DataTableInfo.DataTableInfo[11]\" \"Object.AttackInfo.DataTableInfo.DataTableInfo[12]\" \"Object.AttackInfo.DataTableInfo.DataTableInfo[13]\" \"Object.Default.Equiped_Projectile\" \"Object.Inputs.Actions\" \"Object.Character\" \"Object.Character.Mesh.Object.Rendering.OverrideMaterials\" \"Object.Character.Mesh.Object.Lighting.LightingChannels\" \"Object.Character.Mesh.Object.Collision.BodyInstance\" \"Object.Character.Mesh.Object.Collision.BodyInstance.WalkableSlopeOverride\" \"Object.Character.CharacterMovement.Object.Character Movement: Walking.CurrentFloor\" \"Object.Character.CharacterMovement.Object.Character Movement (Rotation Settings).RotationRate\" \"Object.Character.CharacterMovement.Object.NavMovement.NavAgentProps\" \"Object.Character.CapsuleComponent.Object.Shape.ShapeColor\" \"Object.Character.CapsuleComponent.Object.Collision.BodyInstance\" \"Object.Character.CapsuleComponent.Object.Collision.BodyInstance.WalkableSlopeOverride\" \"Object.Input\" "
 bp_fistAI_02_C=
 REINST_bp_fistCharacter_C_372="\"Object.Character\" \"Object.Character.Mesh.Object.Rendering.OverrideMaterials\" \"Object.Character.Mesh.Object.Lighting.LightingChannels\" \"Object.Character.Mesh.Object.Collision.BodyInstance\" \"Object.Character.Mesh.Object.Collision.BodyInstance.WalkableSlopeOverride\" \"Object.Character.CharacterMovement.Object.Character Movement: Walking.CurrentFloor\" \"Object.Character.CharacterMovement.Object.Character Movement (Rotation Settings).RotationRate\" \"Object.Character.CharacterMovement.Object.NavMovement.NavAgentProps\" \"Object.Character.CapsuleComponent.Object.Shape.ShapeColor\" \"Object.Character.CapsuleComponent.Object.Collision.BodyInstance\" \"Object.Character.CapsuleComponent.Object.Collision.BodyInstance.WalkableSlopeOverride\" \"Object.Input\" "
@@ -2525,6 +2553,7 @@ StaticMeshActor.Collision=True
 EditorNotifyObject.AnimLink=True
 
 [PlacementMode]
+RecentlyPlaced=/Game/Blueprints/MetricListener/Listener.Listener;
 RecentlyPlaced=/Game/Materials/NewMaterial.NewMaterial;
 RecentlyPlaced=/Engine/BasicShapes/Cube.Cube;/Engine/Transient.ActorFactoryBasicShape_0
 RecentlyPlaced=/Game/Blueprints/bp_crackDecal.bp_crackDecal;
