--- a/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -109,20 +109,23 @@ LastLevel=/Game/Maps/TempleBlockOut
 
 [AssetEditorManager]
 CleanShutdown=True
+OpenAssetsAtExit=/Game/Blueprints/AI/bp_fistAI_02.bp_fistAI_02
+OpenAssetsAtExit=/Game/Blueprints/CharacterBP/bp_baseCharacter.bp_baseCharacter
+OpenAssetsAtExit=/Game/Blueprints/Data/Data_Fists_hitValues.Data_Fists_hitValues
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Blueprints/CharacterBP/bp_baseCharacter
-MRUItem1=/Game/Blueprints/AI/bp_fistAI
-MRUItem2=/Game/Anims/FIst/mon_fighter_G_lATK01
-MRUItem3=/Game/Blueprints/AI/bp_fistAI_02
-MRUItem4=/Game/Blueprints/MetricListener/Listener
-MRUItem5=/Game/Blueprints/AnimationBP/ABP_FighterCharacter
-MRUItem6=/Game/Blueprints/CharacterBP/bp_fistCharacter
-MRUItem7=/Game/Blueprints/enums/enum_AiState
-MRUItem8=/Game/Blueprints/AnimationBP/ABP_PlayerCharacter
-MRUItem9=/Game/Blueprints/AnimationBP/basePlayer_abp
-MRUItem10=/Game/Anims/Player/mon_player_finisher
-MRUItem11=/Game/Blueprints/Data/Data_Fists_hitValues
+MRUItem0=/Game/Blueprints/Data/Data_Fists_hitValues
+MRUItem1=/Game/Blueprints/CharacterBP/bp_baseCharacter
+MRUItem2=/Game/Blueprints/AI/bp_fistAI_02
+MRUItem3=/Game/Blueprints/AI/bp_fistAI
+MRUItem4=/Game/Anims/FIst/mon_fighter_G_lATK01
+MRUItem5=/Game/Blueprints/MetricListener/Listener
+MRUItem6=/Game/Blueprints/AnimationBP/ABP_FighterCharacter
+MRUItem7=/Game/Blueprints/CharacterBP/bp_fistCharacter
+MRUItem8=/Game/Blueprints/enums/enum_AiState
+MRUItem9=/Game/Blueprints/AnimationBP/ABP_PlayerCharacter
+MRUItem10=/Game/Blueprints/AnimationBP/basePlayer_abp
+MRUItem11=/Game/Anims/Player/mon_player_finisher
 MRUItem12=/Game/Blueprints/Instance/gameInfo_instance
 MRUItem13=/Game/Mesh/m_Walls_sencondary
 MRUItem14=/Game/Mesh/m_Stairs
@@ -1532,7 +1535,7 @@ ContentBrowserTab1.ActiveTypeFilters=
 ContentBrowserTab1.EnabledTypeFilters=
 ContentBrowserTab1.ActiveFrontendFilters=
 ContentBrowserTab1.EnabledFrontendFilters=
-ContentBrowserTab1.SelectedPaths=/Game/Blueprints/AI
+ContentBrowserTab1.SelectedPaths=/Game/Blueprints/Data
 ContentBrowserTab1.Favorites.SelectedPaths=
 FavoritePaths=
 ContentBrowserTab1.CollectionsExpanded=True
@@ -2417,9 +2420,9 @@ LastLogListing=PIE
 PreviewMeshCollection="\"Object.SkeletalMeshes\" \"Object.SkeletalMeshes\" "
 DataAsset="\"Object.SkeletalMeshes\" \"Object.SkeletalMeshes\" "
 Object=
-bp_baseCharacter_C="\"Object.hATK_saveAttack\" \"Object.hATK_saveAttack\" "
-Character="\"Object.hATK_saveAttack\" \"Object.hATK_saveAttack\" "
-Pawn="\"Object.hATK_saveAttack\" \"Object.hATK_saveAttack\" "
+bp_baseCharacter_C="\"Object.currentState\" \"Object.currentState\" "
+Character="\"Object.currentState\" \"Object.currentState\" "
+Pawn="\"Object.currentState\" \"Object.currentState\" "
 Enemy_BP_C="\"Object.Enemy\" \"Object.Enemy\" "
 BasePlayer_BP_C="\"Object.Character\" \"Object.Character\" "
 ProjectPackagingSettings="\"Object.Packaging.MapsToCook\" "
