--- a/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -109,29 +109,29 @@ LastLevel=/Game/Maps/TempleBlockOut
 
 [AssetEditorManager]
 CleanShutdown=True
-OpenAssetsAtExit=/Game/Blueprints/AI/bp_fistAI_02.bp_fistAI_02
 OpenAssetsAtExit=/Game/Blueprints/CharacterBP/bp_baseCharacter.bp_baseCharacter
-OpenAssetsAtExit=/Game/Blueprints/Data/Data_Fists_hitValues.Data_Fists_hitValues
+OpenAssetsAtExit=/Game/Blueprints/AI/bp_fistAI_02.bp_fistAI_02
+OpenAssetsAtExit=/Game/Blueprints/AI/bp_fistAI.bp_fistAI
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Blueprints/Data/Data_Fists_hitValues
-MRUItem1=/Game/Blueprints/CharacterBP/bp_baseCharacter
-MRUItem2=/Game/Blueprints/AI/bp_fistAI_02
-MRUItem3=/Game/Blueprints/AI/bp_fistAI
-MRUItem4=/Game/Anims/FIst/mon_fighter_G_lATK01
-MRUItem5=/Game/Blueprints/MetricListener/Listener
-MRUItem6=/Game/Blueprints/AnimationBP/ABP_FighterCharacter
-MRUItem7=/Game/Blueprints/CharacterBP/bp_fistCharacter
-MRUItem8=/Game/Blueprints/enums/enum_AiState
-MRUItem9=/Game/Blueprints/AnimationBP/ABP_PlayerCharacter
-MRUItem10=/Game/Blueprints/AnimationBP/basePlayer_abp
-MRUItem11=/Game/Anims/Player/mon_player_finisher
-MRUItem12=/Game/Blueprints/Instance/gameInfo_instance
-MRUItem13=/Game/Mesh/m_Walls_sencondary
-MRUItem14=/Game/Mesh/m_Stairs
-MRUItem15=/Game/Mesh/m_Floor_secondary
-MRUItem16=/Game/Blueprints/enums/States
-MRUItem17=/Game/Blueprints/Data/Data_Staff_hitValues
+MRUItem0=/Game/Blueprints/AI/bp_fistAI
+MRUItem1=/Game/Blueprints/MetricListener/Listener
+MRUItem2=/Game/Blueprints/Data/Data_Fists_hitValues
+MRUItem3=/Game/Blueprints/Data/Data_Staff_hitValues
+MRUItem4=/Game/Blueprints/AI/bp_fistAI_02
+MRUItem5=/Game/Blueprints/CharacterBP/bp_baseCharacter
+MRUItem6=/Game/Anims/FIst/mon_fighter_G_lATK01
+MRUItem7=/Game/Blueprints/AnimationBP/ABP_FighterCharacter
+MRUItem8=/Game/Blueprints/CharacterBP/bp_fistCharacter
+MRUItem9=/Game/Blueprints/enums/enum_AiState
+MRUItem10=/Game/Blueprints/AnimationBP/ABP_PlayerCharacter
+MRUItem11=/Game/Blueprints/AnimationBP/basePlayer_abp
+MRUItem12=/Game/Anims/Player/mon_player_finisher
+MRUItem13=/Game/Blueprints/Instance/gameInfo_instance
+MRUItem14=/Game/Mesh/m_Walls_sencondary
+MRUItem15=/Game/Mesh/m_Stairs
+MRUItem16=/Game/Mesh/m_Floor_secondary
+MRUItem17=/Game/Blueprints/enums/States
 MRUItem18=/Game/Blueprints/Data/struct_hitValues
 MRUItem19=/Game/UI/FinishHim_UI
 
@@ -1505,6 +1505,22 @@ CharacterMovementComponent.MovementComponent=True
 CharacterMovementComponent.Tags=True
 CharacterMovementComponent.Activation=True
 CharacterMovementComponent.Cooking=True
+REINST_bp_fistAI_02_C_254.Tick=True
+REINST_bp_fistAI_02_C_254.None=True
+REINST_bp_fistAI_02_C_254.AI=True
+REINST_bp_fistAI_02_C_254.Controller=True
+REINST_bp_fistAI_02_C_254.Rendering=True
+REINST_bp_fistAI_02_C_254.Replication=True
+REINST_bp_fistAI_02_C_254.Input=True
+REINST_bp_fistAI_02_C_254.Actor=True
+REINST_bp_fistAI_02_C_261.Tick=True
+REINST_bp_fistAI_02_C_261.None=True
+REINST_bp_fistAI_02_C_261.AI=True
+REINST_bp_fistAI_02_C_261.Controller=True
+REINST_bp_fistAI_02_C_261.Rendering=True
+REINST_bp_fistAI_02_C_261.Replication=True
+REINST_bp_fistAI_02_C_261.Input=True
+REINST_bp_fistAI_02_C_261.Actor=True
 
 [RootWindow]
 ScreenPosition=X=626.000 Y=0.000
@@ -1535,7 +1551,7 @@ ContentBrowserTab1.ActiveTypeFilters=
 ContentBrowserTab1.EnabledTypeFilters=
 ContentBrowserTab1.ActiveFrontendFilters=
 ContentBrowserTab1.EnabledFrontendFilters=
-ContentBrowserTab1.SelectedPaths=/Game/Blueprints/Data
+ContentBrowserTab1.SelectedPaths=/Game/Blueprints/AI
 ContentBrowserTab1.Favorites.SelectedPaths=
 FavoritePaths=
 ContentBrowserTab1.CollectionsExpanded=True
@@ -2420,9 +2436,9 @@ LastLogListing=PIE
 PreviewMeshCollection="\"Object.SkeletalMeshes\" \"Object.SkeletalMeshes\" "
 DataAsset="\"Object.SkeletalMeshes\" \"Object.SkeletalMeshes\" "
 Object=
-bp_baseCharacter_C="\"Object.currentState\" \"Object.currentState\" "
-Character="\"Object.currentState\" \"Object.currentState\" "
-Pawn="\"Object.currentState\" \"Object.currentState\" "
+bp_baseCharacter_C="\"Object.ANimation.DashAnimations\" \"Object.ANimation.lATK_G_Animations\" \"Object.ANimation.lATK_A_Animations\" \"Object.ANimation.hATK_G_Animations\" \"Object.ANimation.hATK_A_Animations\" \"Object.Inputs.Actions\" \"Object.Character\" \"Object.Character.Mesh.Object.Rendering.OverrideMaterials\" \"Object.Character.Mesh.Object.Lighting.LightingChannels\" \"Object.Character.Mesh.Object.Collision.BodyInstance\" \"Object.Character.Mesh.Object.Collision.BodyInstance.WalkableSlopeOverride\" \"Object.Character.CharacterMovement.Object.Character Movement: Walking.CurrentFloor\" \"Object.Character.CharacterMovement.Object.Character Movement (Rotation Settings).RotationRate\" \"Object.Character.CharacterMovement.Object.NavMovement.NavAgentProps\" \"Object.Character.CapsuleComponent.Object.Shape.ShapeColor\" \"Object.Character.CapsuleComponent.Object.Collision.BodyInstance\" \"Object.Character.CapsuleComponent.Object.Collision.BodyInstance.WalkableSlopeOverride\" \"Object.Input\" "
+Character="\"Object.ANimation.DashAnimations\" \"Object.ANimation.lATK_G_Animations\" \"Object.ANimation.lATK_A_Animations\" \"Object.ANimation.hATK_G_Animations\" \"Object.ANimation.hATK_A_Animations\" \"Object.Inputs.Actions\" \"Object.Character\" \"Object.Character.Mesh.Object.Rendering.OverrideMaterials\" \"Object.Character.Mesh.Object.Lighting.LightingChannels\" \"Object.Character.Mesh.Object.Collision.BodyInstance\" \"Object.Character.Mesh.Object.Collision.BodyInstance.WalkableSlopeOverride\" \"Object.Character.CharacterMovement.Object.Character Movement: Walking.CurrentFloor\" \"Object.Character.CharacterMovement.Object.Character Movement (Rotation Settings).RotationRate\" \"Object.Character.CharacterMovement.Object.NavMovement.NavAgentProps\" \"Object.Character.CapsuleComponent.Object.Shape.ShapeColor\" \"Object.Character.CapsuleComponent.Object.Collision.BodyInstance\" \"Object.Character.CapsuleComponent.Object.Collision.BodyInstance.WalkableSlopeOverride\" \"Object.Input\" "
+Pawn="\"Object.ANimation.DashAnimations\" \"Object.ANimation.lATK_G_Animations\" \"Object.ANimation.lATK_A_Animations\" \"Object.ANimation.hATK_G_Animations\" \"Object.ANimation.hATK_A_Animations\" \"Object.Inputs.Actions\" \"Object.Character\" \"Object.Character.Mesh.Object.Rendering.OverrideMaterials\" \"Object.Character.Mesh.Object.Lighting.LightingChannels\" \"Object.Character.Mesh.Object.Collision.BodyInstance\" \"Object.Character.Mesh.Object.Collision.BodyInstance.WalkableSlopeOverride\" \"Object.Character.CharacterMovement.Object.Character Movement: Walking.CurrentFloor\" \"Object.Character.CharacterMovement.Object.Character Movement (Rotation Settings).RotationRate\" \"Object.Character.CharacterMovement.Object.NavMovement.NavAgentProps\" \"Object.Character.CapsuleComponent.Object.Shape.ShapeColor\" \"Object.Character.CapsuleComponent.Object.Collision.BodyInstance\" \"Object.Character.CapsuleComponent.Object.Collision.BodyInstance.WalkableSlopeOverride\" \"Object.Input\" "
 Enemy_BP_C="\"Object.Enemy\" \"Object.Enemy\" "
 BasePlayer_BP_C="\"Object.Character\" \"Object.Character\" "
 ProjectPackagingSettings="\"Object.Packaging.MapsToCook\" "
