AI_Offensive/Defensive State (finished)
minor bugs --
--if the player or enemy is hit out of an attack the hitbox will still be live casuing the opponent to get hit by nothing when tring to follow up
--fix with an attack clash?
--still working on a fix for the Ai getting stuck in the pit

--- a/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -109,31 +109,31 @@ LastLevel=/Game/Maps/TempleBlockOut
 
 [AssetEditorManager]
 CleanShutdown=True
-OpenAssetsAtExit=/Game/Blueprints/CharacterBP/bp_baseCharacter.bp_baseCharacter
 OpenAssetsAtExit=/Game/Blueprints/AI/bp_fistAI_02.bp_fistAI_02
-OpenAssetsAtExit=/Game/Blueprints/AI/bp_fistAI.bp_fistAI
+OpenAssetsAtExit=/Game/Blueprints/CharacterBP/bp_baseCharacter.bp_baseCharacter
+OpenAssetsAtExit=/Game/Blueprints/bp_PitTrigger.bp_PitTrigger
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Blueprints/AI/bp_fistAI
-MRUItem1=/Game/Blueprints/MetricListener/Listener
-MRUItem2=/Game/Blueprints/Data/Data_Fists_hitValues
-MRUItem3=/Game/Blueprints/Data/Data_Staff_hitValues
-MRUItem4=/Game/Blueprints/AI/bp_fistAI_02
-MRUItem5=/Game/Blueprints/CharacterBP/bp_baseCharacter
-MRUItem6=/Game/Anims/FIst/mon_fighter_G_lATK01
-MRUItem7=/Game/Blueprints/AnimationBP/ABP_FighterCharacter
-MRUItem8=/Game/Blueprints/CharacterBP/bp_fistCharacter
-MRUItem9=/Game/Blueprints/enums/enum_AiState
-MRUItem10=/Game/Blueprints/AnimationBP/ABP_PlayerCharacter
-MRUItem11=/Game/Blueprints/AnimationBP/basePlayer_abp
-MRUItem12=/Game/Anims/Player/mon_player_finisher
-MRUItem13=/Game/Blueprints/Instance/gameInfo_instance
-MRUItem14=/Game/Mesh/m_Walls_sencondary
-MRUItem15=/Game/Mesh/m_Stairs
-MRUItem16=/Game/Mesh/m_Floor_secondary
-MRUItem17=/Game/Blueprints/enums/States
-MRUItem18=/Game/Blueprints/Data/struct_hitValues
-MRUItem19=/Game/UI/FinishHim_UI
+MRUItem0=/Game/Blueprints/bp_PitTrigger
+MRUItem1=/Game/Blueprints/CharacterBP/bp_baseCharacter
+MRUItem2=/Game/Blueprints/AI/bp_fistAI_02
+MRUItem3=/Game/Blueprints/AI/bp_fistAI
+MRUItem4=/Game/Blueprints/MetricListener/Listener
+MRUItem5=/Game/Blueprints/Data/Data_Fists_hitValues
+MRUItem6=/Game/Blueprints/Data/Data_Staff_hitValues
+MRUItem7=/Game/Anims/FIst/mon_fighter_G_lATK01
+MRUItem8=/Game/Blueprints/AnimationBP/ABP_FighterCharacter
+MRUItem9=/Game/Blueprints/CharacterBP/bp_fistCharacter
+MRUItem10=/Game/Blueprints/enums/enum_AiState
+MRUItem11=/Game/Blueprints/AnimationBP/ABP_PlayerCharacter
+MRUItem12=/Game/Blueprints/AnimationBP/basePlayer_abp
+MRUItem13=/Game/Anims/Player/mon_player_finisher
+MRUItem14=/Game/Blueprints/Instance/gameInfo_instance
+MRUItem15=/Game/Mesh/m_Walls_sencondary
+MRUItem16=/Game/Mesh/m_Stairs
+MRUItem17=/Game/Mesh/m_Floor_secondary
+MRUItem18=/Game/Blueprints/enums/States
+MRUItem19=/Game/Blueprints/Data/struct_hitValues
 
 [DetailCategories]
 CryptoKeysSettings.Encryption=True
@@ -1521,6 +1521,52 @@ REINST_bp_fistAI_02_C_261.Rendering=True
 REINST_bp_fistAI_02_C_261.Replication=True
 REINST_bp_fistAI_02_C_261.Input=True
 REINST_bp_fistAI_02_C_261.Actor=True
+TriggerBox.TransformCommon=True
+TriggerBox.Shape=True
+TriggerBox.Navigation=True
+TriggerBox.Physics=True
+TriggerBox.Collision=True
+TriggerBox.Rendering=True
+TriggerBox.Tags=True
+TriggerBox.Cooking=True
+TriggerBox.Input=True
+TriggerBox.Actor=True
+bp_PitTrigger_C.TransformCommon=True
+bp_PitTrigger_C.Shape=True
+bp_PitTrigger_C.Navigation=True
+bp_PitTrigger_C.Physics=True
+bp_PitTrigger_C.Collision=True
+bp_PitTrigger_C.Rendering=True
+bp_PitTrigger_C.Tags=True
+bp_PitTrigger_C.Cooking=True
+bp_PitTrigger_C.Input=True
+bp_PitTrigger_C.Actor=True
+bp_PitTrigger_C.Tick=True
+bp_PitTrigger_C.Replication=True
+bp_PitTrigger_C.Variable=True
+bp_PitTrigger_C.Sockets=True
+bp_PitTrigger_C.ComponentReplication=True
+bp_PitTrigger_C.Events=True
+REINST_bp_PitTrigger_C_279.TransformCommon=True
+REINST_bp_PitTrigger_C_279.Shape=True
+REINST_bp_PitTrigger_C_279.Navigation=True
+REINST_bp_PitTrigger_C_279.Physics=True
+REINST_bp_PitTrigger_C_279.Collision=True
+REINST_bp_PitTrigger_C_279.Rendering=True
+REINST_bp_PitTrigger_C_279.Tags=True
+REINST_bp_PitTrigger_C_279.Cooking=True
+REINST_bp_PitTrigger_C_279.Input=True
+REINST_bp_PitTrigger_C_279.Actor=True
+REINST_bp_PitTrigger_C_283.TransformCommon=True
+REINST_bp_PitTrigger_C_283.Shape=True
+REINST_bp_PitTrigger_C_283.Navigation=True
+REINST_bp_PitTrigger_C_283.Physics=True
+REINST_bp_PitTrigger_C_283.Collision=True
+REINST_bp_PitTrigger_C_283.Rendering=True
+REINST_bp_PitTrigger_C_283.Tags=True
+REINST_bp_PitTrigger_C_283.Cooking=True
+REINST_bp_PitTrigger_C_283.Input=True
+REINST_bp_PitTrigger_C_283.Actor=True
 
 [RootWindow]
 ScreenPosition=X=626.000 Y=0.000
@@ -1551,7 +1597,7 @@ ContentBrowserTab1.ActiveTypeFilters=
 ContentBrowserTab1.EnabledTypeFilters=
 ContentBrowserTab1.ActiveFrontendFilters=
 ContentBrowserTab1.EnabledFrontendFilters=
-ContentBrowserTab1.SelectedPaths=/Game/Blueprints/AI
+ContentBrowserTab1.SelectedPaths=/Game/Blueprints
 ContentBrowserTab1.Favorites.SelectedPaths=
 FavoritePaths=
 ContentBrowserTab1.CollectionsExpanded=True
@@ -2372,6 +2418,7 @@ BasePlayer_BP_C=K2Node_VariableGet.DefaultValueCategory.None,bp_baseCharacter_C.
 Character=K2Node_VariableGet.DefaultValueCategory.None,bp_baseCharacter_C.Physics.ConstraintsGroup,bp_baseCharacter_C.Rendering.TextureStreaming,bp_baseCharacter_C.Rendering.LOD,ArrayProperty.DefaultValueCategory.None,
 bp_fistAI_02_C=K2Node_VariableGet.DefaultValueCategory.None,bp_baseCharacter_C.Physics.ConstraintsGroup,bp_baseCharacter_C.Rendering.TextureStreaming,bp_baseCharacter_C.Rendering.LOD,ArrayProperty.DefaultValueCategory.None,
 FloatProperty=K2Node_VariableGet.DefaultValueCategory.None,bp_baseCharacter_C.Physics.ConstraintsGroup,bp_baseCharacter_C.Rendering.TextureStreaming,bp_baseCharacter_C.Rendering.LOD,ArrayProperty.DefaultValueCategory.None,
+bp_PitTrigger_C=K2Node_VariableGet.DefaultValueCategory.None,bp_baseCharacter_C.Physics.ConstraintsGroup,bp_baseCharacter_C.Rendering.TextureStreaming,bp_baseCharacter_C.Rendering.LOD,ArrayProperty.DefaultValueCategory.None,
 
 [AssetEditorToolkitTabLocation]
 /Game/Blueprints/CharacterBP/bp_baseCharacter.bp_baseCharacter=1
@@ -2436,9 +2483,9 @@ LastLogListing=PIE
 PreviewMeshCollection="\"Object.SkeletalMeshes\" \"Object.SkeletalMeshes\" "
 DataAsset="\"Object.SkeletalMeshes\" \"Object.SkeletalMeshes\" "
 Object=
-bp_baseCharacter_C="\"Object.ANimation.DashAnimations\" \"Object.ANimation.lATK_G_Animations\" \"Object.ANimation.lATK_A_Animations\" \"Object.ANimation.hATK_G_Animations\" \"Object.ANimation.hATK_A_Animations\" \"Object.Inputs.Actions\" \"Object.Character\" \"Object.Character.Mesh.Object.Rendering.OverrideMaterials\" \"Object.Character.Mesh.Object.Lighting.LightingChannels\" \"Object.Character.Mesh.Object.Collision.BodyInstance\" \"Object.Character.Mesh.Object.Collision.BodyInstance.WalkableSlopeOverride\" \"Object.Character.CharacterMovement.Object.Character Movement: Walking.CurrentFloor\" \"Object.Character.CharacterMovement.Object.Character Movement (Rotation Settings).RotationRate\" \"Object.Character.CharacterMovement.Object.NavMovement.NavAgentProps\" \"Object.Character.CapsuleComponent.Object.Shape.ShapeColor\" \"Object.Character.CapsuleComponent.Object.Collision.BodyInstance\" \"Object.Character.CapsuleComponent.Object.Collision.BodyInstance.WalkableSlopeOverride\" \"Object.Input\" "
-Character="\"Object.ANimation.DashAnimations\" \"Object.ANimation.lATK_G_Animations\" \"Object.ANimation.lATK_A_Animations\" \"Object.ANimation.hATK_G_Animations\" \"Object.ANimation.hATK_A_Animations\" \"Object.Inputs.Actions\" \"Object.Character\" \"Object.Character.Mesh.Object.Rendering.OverrideMaterials\" \"Object.Character.Mesh.Object.Lighting.LightingChannels\" \"Object.Character.Mesh.Object.Collision.BodyInstance\" \"Object.Character.Mesh.Object.Collision.BodyInstance.WalkableSlopeOverride\" \"Object.Character.CharacterMovement.Object.Character Movement: Walking.CurrentFloor\" \"Object.Character.CharacterMovement.Object.Character Movement (Rotation Settings).RotationRate\" \"Object.Character.CharacterMovement.Object.NavMovement.NavAgentProps\" \"Object.Character.CapsuleComponent.Object.Shape.ShapeColor\" \"Object.Character.CapsuleComponent.Object.Collision.BodyInstance\" \"Object.Character.CapsuleComponent.Object.Collision.BodyInstance.WalkableSlopeOverride\" \"Object.Input\" "
-Pawn="\"Object.ANimation.DashAnimations\" \"Object.ANimation.lATK_G_Animations\" \"Object.ANimation.lATK_A_Animations\" \"Object.ANimation.hATK_G_Animations\" \"Object.ANimation.hATK_A_Animations\" \"Object.Inputs.Actions\" \"Object.Character\" \"Object.Character.Mesh.Object.Rendering.OverrideMaterials\" \"Object.Character.Mesh.Object.Lighting.LightingChannels\" \"Object.Character.Mesh.Object.Collision.BodyInstance\" \"Object.Character.Mesh.Object.Collision.BodyInstance.WalkableSlopeOverride\" \"Object.Character.CharacterMovement.Object.Character Movement: Walking.CurrentFloor\" \"Object.Character.CharacterMovement.Object.Character Movement (Rotation Settings).RotationRate\" \"Object.Character.CharacterMovement.Object.NavMovement.NavAgentProps\" \"Object.Character.CapsuleComponent.Object.Shape.ShapeColor\" \"Object.Character.CapsuleComponent.Object.Collision.BodyInstance\" \"Object.Character.CapsuleComponent.Object.Collision.BodyInstance.WalkableSlopeOverride\" \"Object.Input\" "
+bp_baseCharacter_C="\"Object.state_stuck\" \"Object.state_stuck\" "
+Character="\"Object.state_stuck\" \"Object.state_stuck\" "
+Pawn="\"Object.state_stuck\" \"Object.state_stuck\" "
 Enemy_BP_C="\"Object.Enemy\" \"Object.Enemy\" "
 BasePlayer_BP_C="\"Object.Character\" \"Object.Character\" "
 ProjectPackagingSettings="\"Object.Packaging.MapsToCook\" "
@@ -2553,6 +2600,9 @@ bp_fistAI_02_C=
 REINST_bp_fistCharacter_C_372="\"Object.Character\" \"Object.Character.Mesh.Object.Rendering.OverrideMaterials\" \"Object.Character.Mesh.Object.Lighting.LightingChannels\" \"Object.Character.Mesh.Object.Collision.BodyInstance\" \"Object.Character.Mesh.Object.Collision.BodyInstance.WalkableSlopeOverride\" \"Object.Character.CharacterMovement.Object.Character Movement: Walking.CurrentFloor\" \"Object.Character.CharacterMovement.Object.Character Movement (Rotation Settings).RotationRate\" \"Object.Character.CharacterMovement.Object.NavMovement.NavAgentProps\" \"Object.Character.CapsuleComponent.Object.Shape.ShapeColor\" \"Object.Character.CapsuleComponent.Object.Collision.BodyInstance\" \"Object.Character.CapsuleComponent.Object.Collision.BodyInstance.WalkableSlopeOverride\" \"Object.Input\" "
 REINST_bp_baseCharacter_C_371="\"Object.Character\" \"Object.Character.Mesh.Object.Rendering.OverrideMaterials\" \"Object.Character.Mesh.Object.Lighting.LightingChannels\" \"Object.Character.Mesh.Object.Collision.BodyInstance\" \"Object.Character.Mesh.Object.Collision.BodyInstance.WalkableSlopeOverride\" \"Object.Character.CharacterMovement.Object.Character Movement: Walking.CurrentFloor\" \"Object.Character.CharacterMovement.Object.Character Movement (Rotation Settings).RotationRate\" \"Object.Character.CharacterMovement.Object.NavMovement.NavAgentProps\" \"Object.Character.CapsuleComponent.Object.Shape.ShapeColor\" \"Object.Character.CapsuleComponent.Object.Collision.BodyInstance\" \"Object.Character.CapsuleComponent.Object.Collision.BodyInstance.WalkableSlopeOverride\" \"Object.Input\" "
 REINST_bp_fistCharacter_C_838="\"Object.Character\" \"Object.Character.Mesh.Object.Rendering.OverrideMaterials\" \"Object.Character.Mesh.Object.Lighting.LightingChannels\" \"Object.Character.Mesh.Object.Collision.BodyInstance\" \"Object.Character.Mesh.Object.Collision.BodyInstance.WalkableSlopeOverride\" \"Object.Character.CharacterMovement.Object.Character Movement: Walking.CurrentFloor\" \"Object.Character.CharacterMovement.Object.Character Movement (Rotation Settings).RotationRate\" \"Object.Character.CharacterMovement.Object.NavMovement.NavAgentProps\" \"Object.Character.CapsuleComponent.Object.Shape.ShapeColor\" \"Object.Character.CapsuleComponent.Object.Collision.BodyInstance\" \"Object.Character.CapsuleComponent.Object.Collision.BodyInstance.WalkableSlopeOverride\" \"Object.Input\" "
+bp_PitTrigger_C=
+TriggerBox=
+TriggerBase=
 
 [/Script/PinnedCommandList.PinnedCommandListSettings]
 Contexts=(Name="AnimationEditor",Commands=)
@@ -2572,6 +2622,7 @@ StaticMeshActor.Collision=True
 EditorNotifyObject.AnimLink=True
 
 [PlacementMode]
+RecentlyPlaced=/Script/Engine.TriggerBox;/Engine/Transient.ActorFactoryTriggerBox_0
 RecentlyPlaced=/Game/Blueprints/MetricListener/Listener.Listener;
 RecentlyPlaced=/Game/Materials/NewMaterial.NewMaterial;
 RecentlyPlaced=/Engine/BasicShapes/Cube.Cube;/Engine/Transient.ActorFactoryBasicShape_0
