More of a test really.
addDamageDealt listener funtion to Hitstun_Logic and commiting to new branch to see how that works.

--- a/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -108,27 +108,26 @@ MRUItem1=/Game/Maps/MainMenu
 LastLevel=/Game/Maps/TempleBlockOut
 
 [AssetEditorManager]
-CleanShutdown=True
-OpenAssetsAtExit=/Game/Blueprints/AI/bp_fistAI_02.bp_fistAI_02
+CleanShutdown=False
 OpenAssetsAtExit=/Game/Blueprints/CharacterBP/bp_baseCharacter.bp_baseCharacter
-OpenAssetsAtExit=/Game/Blueprints/bp_PitTrigger.bp_PitTrigger
+OpenAssetsAtExit=/Game/Blueprints/Instance/gameInfo_instance.gameInfo_instance
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Blueprints/bp_PitTrigger
-MRUItem1=/Game/Blueprints/CharacterBP/bp_baseCharacter
-MRUItem2=/Game/Blueprints/AI/bp_fistAI_02
-MRUItem3=/Game/Blueprints/AI/bp_fistAI
-MRUItem4=/Game/Blueprints/MetricListener/Listener
-MRUItem5=/Game/Blueprints/Data/Data_Fists_hitValues
-MRUItem6=/Game/Blueprints/Data/Data_Staff_hitValues
-MRUItem7=/Game/Anims/FIst/mon_fighter_G_lATK01
-MRUItem8=/Game/Blueprints/AnimationBP/ABP_FighterCharacter
-MRUItem9=/Game/Blueprints/CharacterBP/bp_fistCharacter
-MRUItem10=/Game/Blueprints/enums/enum_AiState
-MRUItem11=/Game/Blueprints/AnimationBP/ABP_PlayerCharacter
-MRUItem12=/Game/Blueprints/AnimationBP/basePlayer_abp
-MRUItem13=/Game/Anims/Player/mon_player_finisher
-MRUItem14=/Game/Blueprints/Instance/gameInfo_instance
+MRUItem0=/Game/Blueprints/Instance/gameInfo_instance
+MRUItem1=/Game/Blueprints/MetricListener/Listener
+MRUItem2=/Game/Blueprints/CharacterBP/bp_baseCharacter
+MRUItem3=/Game/Blueprints/bp_PitTrigger
+MRUItem4=/Game/Blueprints/AI/bp_fistAI_02
+MRUItem5=/Game/Blueprints/AI/bp_fistAI
+MRUItem6=/Game/Blueprints/Data/Data_Fists_hitValues
+MRUItem7=/Game/Blueprints/Data/Data_Staff_hitValues
+MRUItem8=/Game/Anims/FIst/mon_fighter_G_lATK01
+MRUItem9=/Game/Blueprints/AnimationBP/ABP_FighterCharacter
+MRUItem10=/Game/Blueprints/CharacterBP/bp_fistCharacter
+MRUItem11=/Game/Blueprints/enums/enum_AiState
+MRUItem12=/Game/Blueprints/AnimationBP/ABP_PlayerCharacter
+MRUItem13=/Game/Blueprints/AnimationBP/basePlayer_abp
+MRUItem14=/Game/Anims/Player/mon_player_finisher
 MRUItem15=/Game/Mesh/m_Walls_sencondary
 MRUItem16=/Game/Mesh/m_Stairs
 MRUItem17=/Game/Mesh/m_Floor_secondary
@@ -1567,6 +1566,18 @@ REINST_bp_PitTrigger_C_283.Tags=True
 REINST_bp_PitTrigger_C_283.Cooking=True
 REINST_bp_PitTrigger_C_283.Input=True
 REINST_bp_PitTrigger_C_283.Actor=True
+CapsuleComponent.Variable=True
+CapsuleComponent.TransformCommon=True
+CapsuleComponent.Sockets=True
+CapsuleComponent.Shape=True
+CapsuleComponent.Navigation=True
+CapsuleComponent.Rendering=True
+CapsuleComponent.Physics=True
+CapsuleComponent.Collision=True
+CapsuleComponent.Tags=True
+CapsuleComponent.ComponentReplication=True
+CapsuleComponent.Cooking=True
+CapsuleComponent.Events=True
 
 [RootWindow]
 ScreenPosition=X=626.000 Y=0.000
@@ -2483,9 +2494,9 @@ LastLogListing=PIE
 PreviewMeshCollection="\"Object.SkeletalMeshes\" \"Object.SkeletalMeshes\" "
 DataAsset="\"Object.SkeletalMeshes\" \"Object.SkeletalMeshes\" "
 Object=
-bp_baseCharacter_C="\"Object.state_stuck\" \"Object.state_stuck\" "
-Character="\"Object.state_stuck\" \"Object.state_stuck\" "
-Pawn="\"Object.state_stuck\" \"Object.state_stuck\" "
+bp_baseCharacter_C="\"Object.ListenerRef\" \"Object.ListenerRef\" "
+Character="\"Object.ListenerRef\" \"Object.ListenerRef\" "
+Pawn="\"Object.ListenerRef\" \"Object.ListenerRef\" "
 Enemy_BP_C="\"Object.Enemy\" \"Object.Enemy\" "
 BasePlayer_BP_C="\"Object.Character\" \"Object.Character\" "
 ProjectPackagingSettings="\"Object.Packaging.MapsToCook\" "
@@ -2620,6 +2631,7 @@ Brush.BrushSettings=True
 Brush.Geometry=True
 StaticMeshActor.Collision=True
 EditorNotifyObject.AnimLink=True
+StaticMeshComponent.Collision=True
 
 [PlacementMode]
 RecentlyPlaced=/Script/Engine.TriggerBox;/Engine/Transient.ActorFactoryTriggerBox_0
