--- a/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -109,31 +109,31 @@ LastLevel=/Game/Maps/TempleBlockOut
 
 [AssetEditorManager]
 CleanShutdown=True
-OpenAssetsAtExit=/Game/Blueprints/AI/bp_fistAI_02.bp_fistAI_02
 OpenAssetsAtExit=/Game/Blueprints/CharacterBP/bp_baseCharacter.bp_baseCharacter
-OpenAssetsAtExit=/Game/Blueprints/bp_PitTrigger.bp_PitTrigger
+OpenAssetsAtExit=/Game/Materials/NewMaterial.NewMaterial
+OpenAssetsAtExit=/Game/Blueprints/AI/bp_fistAI_02.bp_fistAI_02
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Blueprints/bp_PitTrigger
-MRUItem1=/Game/Blueprints/CharacterBP/bp_baseCharacter
+MRUItem0=/Game/sfx/Disco_Inferno
+MRUItem1=/Game/Materials/NewMaterial
 MRUItem2=/Game/Blueprints/AI/bp_fistAI_02
 MRUItem3=/Game/Blueprints/AI/bp_fistAI
-MRUItem4=/Game/Blueprints/MetricListener/Listener
-MRUItem5=/Game/Blueprints/Data/Data_Fists_hitValues
-MRUItem6=/Game/Blueprints/Data/Data_Staff_hitValues
-MRUItem7=/Game/Anims/FIst/mon_fighter_G_lATK01
-MRUItem8=/Game/Blueprints/AnimationBP/ABP_FighterCharacter
-MRUItem9=/Game/Blueprints/CharacterBP/bp_fistCharacter
-MRUItem10=/Game/Blueprints/enums/enum_AiState
-MRUItem11=/Game/Blueprints/AnimationBP/ABP_PlayerCharacter
-MRUItem12=/Game/Blueprints/AnimationBP/basePlayer_abp
-MRUItem13=/Game/Anims/Player/mon_player_finisher
-MRUItem14=/Game/Blueprints/Instance/gameInfo_instance
-MRUItem15=/Game/Mesh/m_Walls_sencondary
-MRUItem16=/Game/Mesh/m_Stairs
-MRUItem17=/Game/Mesh/m_Floor_secondary
-MRUItem18=/Game/Blueprints/enums/States
-MRUItem19=/Game/Blueprints/Data/struct_hitValues
+MRUItem4=/Game/Blueprints/CharacterBP/bp_fistCharacter
+MRUItem5=/Game/Blueprints/CharacterBP/bp_baseCharacter
+MRUItem6=/Game/Blueprints/bp_PitTrigger
+MRUItem7=/Game/Blueprints/MetricListener/Listener
+MRUItem8=/Game/Blueprints/Data/Data_Fists_hitValues
+MRUItem9=/Game/Blueprints/Data/Data_Staff_hitValues
+MRUItem10=/Game/Anims/FIst/mon_fighter_G_lATK01
+MRUItem11=/Game/Blueprints/AnimationBP/ABP_FighterCharacter
+MRUItem12=/Game/Blueprints/enums/enum_AiState
+MRUItem13=/Game/Blueprints/AnimationBP/ABP_PlayerCharacter
+MRUItem14=/Game/Blueprints/AnimationBP/basePlayer_abp
+MRUItem15=/Game/Anims/Player/mon_player_finisher
+MRUItem16=/Game/Blueprints/Instance/gameInfo_instance
+MRUItem17=/Game/Mesh/m_Walls_sencondary
+MRUItem18=/Game/Mesh/m_Stairs
+MRUItem19=/Game/Mesh/m_Floor_secondary
 
 [DetailCategories]
 CryptoKeysSettings.Encryption=True
@@ -1597,7 +1597,7 @@ ContentBrowserTab1.ActiveTypeFilters=
 ContentBrowserTab1.EnabledTypeFilters=
 ContentBrowserTab1.ActiveFrontendFilters=
 ContentBrowserTab1.EnabledFrontendFilters=
-ContentBrowserTab1.SelectedPaths=/Game/Blueprints
+ContentBrowserTab1.SelectedPaths=/Game/sfx
 ContentBrowserTab1.Favorites.SelectedPaths=
 FavoritePaths=
 ContentBrowserTab1.CollectionsExpanded=True
@@ -2475,6 +2475,7 @@ bp_PitTrigger_C=K2Node_VariableGet.DefaultValueCategory.None,bp_baseCharacter_C.
 /Game/Blueprints/Instance/gameInfo_instance.gameInfo_instance=1
 /Game/Blueprints/AI/bp_fistAI_02.bp_fistAI_02=1
 /Game/Anims/FIst/mon_Fighter_G_lATK02.mon_Fighter_G_lATK02=1
+/Game/Blueprints/CharacterBP/bp_fistCharacter.bp_fistCharacter=1
 
 [MessageLog]
 LastLogListing=PIE
@@ -2483,9 +2484,9 @@ LastLogListing=PIE
 PreviewMeshCollection="\"Object.SkeletalMeshes\" \"Object.SkeletalMeshes\" "
 DataAsset="\"Object.SkeletalMeshes\" \"Object.SkeletalMeshes\" "
 Object=
-bp_baseCharacter_C="\"Object.state_stuck\" \"Object.state_stuck\" "
-Character="\"Object.state_stuck\" \"Object.state_stuck\" "
-Pawn="\"Object.state_stuck\" \"Object.state_stuck\" "
+bp_baseCharacter_C="\"Object.DataTableInfo\" \"Object.DataTableInfo\" "
+Character="\"Object.DataTableInfo\" \"Object.DataTableInfo\" "
+Pawn="\"Object.DataTableInfo\" \"Object.DataTableInfo\" "
 Enemy_BP_C="\"Object.Enemy\" \"Object.Enemy\" "
 BasePlayer_BP_C="\"Object.Character\" \"Object.Character\" "
 ProjectPackagingSettings="\"Object.Packaging.MapsToCook\" "
@@ -2674,7 +2675,7 @@ bMaterialQualityUsed[1]=1
 bMaterialQualityUsed[2]=0
 
 [MaterialEditor]
-PrimType=3
+PrimType=1
 
 [WidgetTemplatesExpanded]
 Extra=False
