--- a/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -110,30 +110,29 @@ LastLevel=/Game/Maps/TempleBlockOut
 [AssetEditorManager]
 CleanShutdown=True
 OpenAssetsAtExit=/Game/Blueprints/CharacterBP/bp_baseCharacter.bp_baseCharacter
-OpenAssetsAtExit=/Game/Materials/NewMaterial.NewMaterial
-OpenAssetsAtExit=/Game/Blueprints/AI/bp_fistAI_02.bp_fistAI_02
+OpenAssetsAtExit=/Game/Blueprints/enums/Attack_Active.Attack_Active
 
 [ContentBrowserRecent]
-MRUItem0=/Game/sfx/Disco_Inferno
-MRUItem1=/Game/Materials/NewMaterial
+MRUItem0=/Game/Blueprints/CharacterBP/bp_baseCharacter
+MRUItem1=/Game/Blueprints/enums/Attack_Active
 MRUItem2=/Game/Blueprints/AI/bp_fistAI_02
-MRUItem3=/Game/Blueprints/AI/bp_fistAI
-MRUItem4=/Game/Blueprints/CharacterBP/bp_fistCharacter
-MRUItem5=/Game/Blueprints/CharacterBP/bp_baseCharacter
-MRUItem6=/Game/Blueprints/bp_PitTrigger
-MRUItem7=/Game/Blueprints/MetricListener/Listener
-MRUItem8=/Game/Blueprints/Data/Data_Fists_hitValues
-MRUItem9=/Game/Blueprints/Data/Data_Staff_hitValues
-MRUItem10=/Game/Anims/FIst/mon_fighter_G_lATK01
-MRUItem11=/Game/Blueprints/AnimationBP/ABP_FighterCharacter
-MRUItem12=/Game/Blueprints/enums/enum_AiState
-MRUItem13=/Game/Blueprints/AnimationBP/ABP_PlayerCharacter
-MRUItem14=/Game/Blueprints/AnimationBP/basePlayer_abp
-MRUItem15=/Game/Anims/Player/mon_player_finisher
-MRUItem16=/Game/Blueprints/Instance/gameInfo_instance
-MRUItem17=/Game/Mesh/m_Walls_sencondary
-MRUItem18=/Game/Mesh/m_Stairs
-MRUItem19=/Game/Mesh/m_Floor_secondary
+MRUItem3=/Game/Anims/Player/mon_player_blockedAnimation
+MRUItem4=/Game/sfx/Disco_Inferno
+MRUItem5=/Game/Materials/NewMaterial
+MRUItem6=/Game/Blueprints/AI/bp_fistAI
+MRUItem7=/Game/Blueprints/CharacterBP/bp_fistCharacter
+MRUItem8=/Game/Blueprints/bp_PitTrigger
+MRUItem9=/Game/Blueprints/MetricListener/Listener
+MRUItem10=/Game/Blueprints/Data/Data_Fists_hitValues
+MRUItem11=/Game/Blueprints/Data/Data_Staff_hitValues
+MRUItem12=/Game/Anims/FIst/mon_fighter_G_lATK01
+MRUItem13=/Game/Blueprints/AnimationBP/ABP_FighterCharacter
+MRUItem14=/Game/Blueprints/enums/enum_AiState
+MRUItem15=/Game/Blueprints/AnimationBP/ABP_PlayerCharacter
+MRUItem16=/Game/Blueprints/AnimationBP/basePlayer_abp
+MRUItem17=/Game/Anims/Player/mon_player_finisher
+MRUItem18=/Game/Blueprints/Instance/gameInfo_instance
+MRUItem19=/Game/Mesh/m_Walls_sencondary
 
 [DetailCategories]
 CryptoKeysSettings.Encryption=True
@@ -1567,6 +1566,18 @@ REINST_bp_PitTrigger_C_283.Tags=True
 REINST_bp_PitTrigger_C_283.Cooking=True
 REINST_bp_PitTrigger_C_283.Input=True
 REINST_bp_PitTrigger_C_283.Actor=True
+CapsuleComponent.Variable=True
+CapsuleComponent.TransformCommon=True
+CapsuleComponent.Sockets=True
+CapsuleComponent.Shape=True
+CapsuleComponent.Navigation=True
+CapsuleComponent.Rendering=True
+CapsuleComponent.Physics=True
+CapsuleComponent.Collision=True
+CapsuleComponent.Tags=True
+CapsuleComponent.ComponentReplication=True
+CapsuleComponent.Cooking=True
+CapsuleComponent.Events=True
 
 [RootWindow]
 ScreenPosition=X=626.000 Y=0.000
@@ -1597,7 +1608,7 @@ ContentBrowserTab1.ActiveTypeFilters=
 ContentBrowserTab1.EnabledTypeFilters=
 ContentBrowserTab1.ActiveFrontendFilters=
 ContentBrowserTab1.EnabledFrontendFilters=
-ContentBrowserTab1.SelectedPaths=/Game/sfx
+ContentBrowserTab1.SelectedPaths=/Game/Blueprints/CharacterBP
 ContentBrowserTab1.Favorites.SelectedPaths=
 FavoritePaths=
 ContentBrowserTab1.CollectionsExpanded=True
@@ -2476,6 +2487,7 @@ bp_PitTrigger_C=K2Node_VariableGet.DefaultValueCategory.None,bp_baseCharacter_C.
 /Game/Blueprints/AI/bp_fistAI_02.bp_fistAI_02=1
 /Game/Anims/FIst/mon_Fighter_G_lATK02.mon_Fighter_G_lATK02=1
 /Game/Blueprints/CharacterBP/bp_fistCharacter.bp_fistCharacter=1
+/Game/Anims/Player/mon_player_blockedAnimation.mon_player_blockedAnimation=1
 
 [MessageLog]
 LastLogListing=PIE
@@ -2484,9 +2496,9 @@ LastLogListing=PIE
 PreviewMeshCollection="\"Object.SkeletalMeshes\" \"Object.SkeletalMeshes\" "
 DataAsset="\"Object.SkeletalMeshes\" \"Object.SkeletalMeshes\" "
 Object=
-bp_baseCharacter_C="\"Object.DataTableInfo\" \"Object.DataTableInfo\" "
-Character="\"Object.DataTableInfo\" \"Object.DataTableInfo\" "
-Pawn="\"Object.DataTableInfo\" \"Object.DataTableInfo\" "
+bp_baseCharacter_C="\"Object.hitbox_active\" \"Object.hitbox_active\" "
+Character="\"Object.hitbox_active\" \"Object.hitbox_active\" "
+Pawn="\"Object.hitbox_active\" \"Object.hitbox_active\" "
 Enemy_BP_C="\"Object.Enemy\" \"Object.Enemy\" "
 BasePlayer_BP_C="\"Object.Character\" \"Object.Character\" "
 ProjectPackagingSettings="\"Object.Packaging.MapsToCook\" "
